# vulcan-ci

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.worker  EU_CICD_Business_Case.md  LAST_AND_NEXT.md  README.md  ROADMAP.md  Taskfile.yml  clippy.toml  diesel.toml  docker-compose.yml  kind-config.yaml  rustfmt.toml
crates/api/src/: main.rs
crates/chain-parser/: Cargo.toml  PARSER_SPEC.md  TRIGGER_FEATURE_GAP.md
crates/chain-parser-api/: Cargo.toml
crates/chain-parser-api/src/: error.rs
crates/chain-parser-api/tests/: api_tests.rs
crates/chain-parser/examples/fragments/: build.kdl  deploy.kdl
crates/chain-parser/examples/workflows/: complex.kdl  conditional.kdl  parallel.kdl  simple.kdl
crates/chain-parser/src/: ast.rs  error.rs  main.rs  service.rs  service_tests.rs
crates/core/: Cargo.toml
crates/core/src/: db.rs  schema.rs
crates/core/src/models/: chain.rs  fragment.rs  mod.rs  worker.rs
crates/core/src/repositories/: error.rs  mod.rs
crates/libs/chain-parser/: Cargo.toml  README.md
crates/libs/chain-parser/examples/fragments/: test.kdl
crates/libs/chain-parser/examples/workflows/: with_imports.kdl
crates/libs/chain-parser/src/: lib.rs  parser.rs  parser_tests.rs
crates/libs/core/: README.md
crates/libs/core/src/: db.rs  lib.rs  schema.rs
crates/libs/core/src/models/: chain.rs  fragment.rs  worker.rs
crates/libs/core/src/repositories/: chain.rs  fragment.rs  worker.rs
crates/metrics-api/: Cargo.toml
crates/metrics-api/src/: main.rs
crates/services/api/: Cargo.toml  README.md
crates/services/chain-parser-api/: README.md
crates/services/chain-parser-api/src/: handlers.rs  lib.rs  main.rs
crates/services/chain-parser-cli/: Cargo.toml  README.md
crates/services/chain-parser-cli/src/: main.rs
crates/services/worker/: Cargo.toml  README.md
crates/services/worker-controller/: Cargo.toml  README.md
crates/services/worker-controller/src/: config.rs  controller.rs  error.rs  lib.rs  main.rs
crates/services/worker-controller/src/client/: dto.rs  mod.rs
crates/services/worker-controller/src/kubernetes/: mod.rs
crates/services/worker-controller/src/scaler/: algorithm.rs  mod.rs  state.rs
crates/services/worker-orchestrator/: Cargo.toml  README.md
crates/services/worker-orchestrator/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/services/worker-orchestrator/src/api/: dto.rs  handlers.rs  mod.rs
crates/services/worker-orchestrator/src/orchestrator/: health.rs  mod.rs  scheduler.rs
crates/services/worker/src/: config.rs  error.rs  lib.rs  main.rs  worker.rs
crates/services/worker/src/client/: dto.rs  mod.rs
crates/services/worker/src/executor/: mod.rs  output.rs
crates/services/workflow-trigger-processor/: Cargo.toml  README.md
crates/services/workflow-trigger-processor/src/: main.rs
crates/worker-orchestrator/src/: main.rs
k8s/: 00-namespace.yaml  01-postgres.yaml  02-orchestrator.yaml  03-worker.yaml  04-controller.yaml
migrations/2026-01-08-104131-0000_create_workers/: down.sql  up.sql
migrations/2026-01-08-104134-0000_create_chains/: down.sql  up.sql
migrations/2026-01-08-104145-0000_create_fragments/: down.sql  up.sql
migrations/2026-01-08-120000_add_fragment_fields/: down.sql  up.sql
migrations/2026-01-08-120001_add_chain_metadata/: down.sql  up.sql
migrations/2026-01-18-000001_add_worker_orchestrator_fields/: down.sql  up.sql
migrations/2026-01-18-000002_add_fragment_execution_fields/: down.sql  up.sql
migrations/2026-01-18-000003_add_chain_completion_fields/: down.sql  up.sql
scripts/: test-scaling.sh
src/: db.rs  main.rs  models.rs  schema.rs
src/models/: chain.rs  fragment.rs  worker.rs
src/repositories/: mod.rs  worker.rs
