[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/workflow-trigger-processor",
    "crates/chain-parser",
    "crates/worker",
    "crates/worker-orchestrator",
    "crates/api",
    "crates/metrics-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
# Allow unused code in scaffold phase - remove once implementation is complete
dead_code = "allow"

[workspace.lints.clippy]
# Pedantic lints for better code quality
pedantic = "warn"
# Specific lints to enforce
all = "warn"
# Nursery lints (experimental but useful)
nursery = "warn"

[workspace.dependencies]
# Internal crates
vulcan-core = { path = "crates/core" }

# External dependencies
chrono = "0.4"
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.2"
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
dotenvy = "0.15"
uuid = { version = "1.19.0", features = ["v4"] }
