[package]
name = "vulcan-chain-parser-api"
version.workspace = true
edition.workspace = true
description = "HTTP API service for parsing Vulcan CI workflow files"

[lints]
workspace = true

[[bin]]
name = "vulcan-parser-api"
path = "src/main.rs"

[dependencies]
vulcan-chain-parser.workspace = true
vulcan-core = { workspace = true, features = ["migrations"] }
axum.workspace = true
diesel.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
