[package]
name = "vulcan-worker-controller"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime and utilities
tokio.workspace = true
futures.workspace = true

# HTTP client
reqwest.workspace = true

# Kubernetes client
kube.workspace = true
k8s-openapi.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
dotenvy.workspace = true
