[package]
name = "vulcan-worker-orchestrator"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
vulcan-core.workspace = true

axum.workspace = true
chrono.workspace = true
diesel.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
