[package]
name = "vulcan-worker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
vulcan-core.workspace = true
chrono.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
